# ast-dsl

./: .env  .gitignore  AGENTS.md  README.md  THEORY.md  flake.nix  intrinsic_score_v2.py  main.py  pyproject.toml
alspec/: __init__.py  analysis.py  axiom_gen.py  axiom_match.py  basis.py  cache.py  check.py  cli.py  compile_diagnostic.py  examples.py  gen_reference.py  helpers.py  lenses.py  llm.py  load.py  obligation.py  obligation_render.py  pipeline.py  prompt.py  prompt_chunks.py  report.py  result.py  score.py  score_report.py  serialization.py  signature.py  skeleton.py  sorts.py  spec.py  stages.py  terms.py  worked_example.py
alspec/eval/: __init__.py  doe_analyze.py  doe_config.py  doe_design.py  doe_runner.py  domains.py  harness.py  report.py  stage1_score.py  stage4_score.py  taxonomy.py
alspec/reference/: __init__.py  api_reference.py  (+6 more)
examples/: connection_spec.py  dns_zone_spec.py  examples.py  llm_example.py  rate_limiter_spec.py  session_store_spec.py
experiments/: domain_lens_experiment.py  example.toml  saturation_ladder.py  saturation_ladder_s1.py  stage4_examples.toml  stage4_screen.toml  stage4_smoke.toml
golden/: access-control.py  auction.py  bank-account.py  boolean-flag.py  bounded-counter.py  bug-tracker.py  counter.py  door-lock.py  email-inbox.py  inventory.py  library-lending.py  phone-book.py  queue.py  shopping-cart.py  stack.py  temperature-sensor.py  thermostat.py  todo-list.py  traffic-light.py  version-history.py
many_sorted/: __init__.py  basis.py  cli.py  gen_reference.py  llm.py  serialization.py  signature.py  sorts.py  terms.py
pipeline/: __init__.py  prompt_renderer.py
scripts/: analyze_uncovered.py  characterize_uncovered.py  diagnose_failures.py  extract_fills_data.py  fix_worked_examples.py  fix_worked_examples_v2.py  fix_worked_examples_v3.py  fix_worked_examples_v4.py  gen_reference.py  llm_example.py  pipeline_test.py  run_eval.py  run_examples.py  run_novel_battery.py  run_pipeline.py  templating_example.py  test_obligation.py  test_render_obligation.py  validate_worked_examples.py
sensor-descs/: adc-channel.txt  color-sensor.txt  env-sensor.txt  moisture-controller.txt  thermocouple.txt
sensor-refs/: bank-account.txt  boolean-flag.txt  bounded-counter.txt  counter.txt  email-inbox.txt  env-sensor.txt  inventory.txt  moisture-controller.txt  phone-book.txt  temperature-sensor.txt  traffic-light.txt
tests/: test_analysis.py  test_axiom_gen.py  test_axiom_match.py  test_basic.py  test_cache.py  test_check.py  test_doe.py  test_global_axiom.py  test_llm.py  test_obligation.py  test_prompt_chunks.py  test_score.py  test_serialization.py  test_stage4_score_edge.py  test_taxonomy.py
(+149 files in other folders)
