[project]
name = "alspec"
version = "0.1.0"
description = "Building blocks for many-sorted algebraic specifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langfuse>=3.14.5",
    "openai>=2.24.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
alspec = "alspec.cli:main"

[tool.setuptools]
packages = ["alspec"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
