[project]
name = "alspec"
version = "0.1.0"
description = "Building blocks for many-sorted algebraic specifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "langfuse>=3.14.5",
    "openai>=2.24.0",
    "pydoe3>=1.6.2",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
]

[project.scripts]
alspec = "alspec.cli:main"

[tool.setuptools]
packages = ["alspec", "alspec.eval", "alspec.reference", "alspec.reference.chunks"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
]

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_context = true
ignore_missing_imports = false

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "B",  # flake8-bugbear
    "I",  # isort
    "UP", # pyupgrade
    "ASYNC", # flake8-async
]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: marks tests that make real LLM calls (deselect with -k 'not integration')",
]

